# Delineate

./: Delineate.cabal  LICENSE  README.md
Control/: Delineate.hs
Control/Delineate/: Category.hs  Expon.hs
