name:                Delineate
version:             0.1.0.0
synopsis:            Linear Logic toybox
homepage:            https://github.com/isomorphism/Delineate
license:             BSD3
license-file:        LICENSE
author:              C. McCann
maintainer:          cam@uptoisomorphism.net
category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Delineate,
                       Control.Delineate.Expon
                       Control.Delineate.Category
  build-depends:       base ==4.6.*, 
                       void ==0.5.*, 
                       Overture ==0.3.*